feat: expose JSON schemas for plugins over Admin API
- refactor in schema usage for entity and plugin schemas
  - this includes the internal/json/schema package and grpc
