# internal/gen/grpc/kong/admin/service/v1/schemas.pb.gw.go
@@ -83,6 +83,58 @@ func local_request_SchemasService_GetSchemas_0(ctx context.Context, marshaler ru
 
 }
 
+func request_SchemasService_GetSchemasPlugin_0(ctx context.Context, marshaler runtime.Marshaler, client SchemasServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetSchemasPluginRequest
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["name"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "name")
+	}
+
+	protoReq.Name, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "name", err)
+	}
+
+	msg, err := client.GetSchemasPlugin(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_SchemasService_GetSchemasPlugin_0(ctx context.Context, marshaler runtime.Marshaler, server SchemasServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetSchemasPluginRequest
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["name"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "name")
+	}
+
+	protoReq.Name, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "name", err)
+	}
+
+	msg, err := server.GetSchemasPlugin(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterSchemasServiceHandlerServer registers the http handlers for service SchemasService to "mux".
 // UnaryRPC     :call SchemasServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -109,6 +161,29 @@ func RegisterSchemasServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 
 		forward_SchemasService_GetSchemas_0(ctx, mux, outboundMarshaler, w, req, response_SchemasService_GetSchemas_0{resp}, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_SchemasService_GetSchemasPlugin_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/kong.admin.service.v1.SchemasService/GetSchemasPlugin", runtime.WithHTTPPathPattern("/v1/schemas/plugins/json/{name}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SchemasService_GetSchemasPlugin_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SchemasService_GetSchemasPlugin_0(ctx, mux, outboundMarshaler, w, req, response_SchemasService_GetSchemasPlugin_0{resp}, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -173,6 +248,26 @@ func RegisterSchemasServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
+	mux.Handle("GET", pattern_SchemasService_GetSchemasPlugin_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/kong.admin.service.v1.SchemasService/GetSchemasPlugin", runtime.WithHTTPPathPattern("/v1/schemas/plugins/json/{name}"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SchemasService_GetSchemasPlugin_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_SchemasService_GetSchemasPlugin_0(ctx, mux, outboundMarshaler, w, req, response_SchemasService_GetSchemasPlugin_0{resp}, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -185,10 +280,23 @@ func (m response_SchemasService_GetSchemas_0) XXX_ResponseBody() interface{} {
 	return response.Schema
 }
 
+type response_SchemasService_GetSchemasPlugin_0 struct {
+	proto.Message
+}
+
+func (m response_SchemasService_GetSchemasPlugin_0) XXX_ResponseBody() interface{} {
+	response := m.Message.(*GetSchemasPluginResponse)
+	return response.Schema
+}
+
 var (
 	pattern_SchemasService_GetSchemas_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "schemas", "json", "name"}, ""))
+
+	pattern_SchemasService_GetSchemasPlugin_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"v1", "schemas", "plugins", "json", "name"}, ""))
 )
 
 var (
 	forward_SchemasService_GetSchemas_0 = runtime.ForwardResponseMessage
+
+	forward_SchemasService_GetSchemasPlugin_0 = runtime.ForwardResponseMessage
 )
