# internal/gen/grpc/kong/admin/service/v1/schemas_grpc.pb.go
@@ -19,6 +19,7 @@ const _ = grpc.SupportPackageIsVersion7
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type SchemasServiceClient interface {
 	GetSchemas(ctx context.Context, in *GetSchemasRequest, opts ...grpc.CallOption) (*GetSchemasResponse, error)
+	GetSchemasPlugin(ctx context.Context, in *GetSchemasPluginRequest, opts ...grpc.CallOption) (*GetSchemasPluginResponse, error)
 }
 
 type schemasServiceClient struct {
@@ -38,11 +39,21 @@ func (c *schemasServiceClient) GetSchemas(ctx context.Context, in *GetSchemasReq
 	return out, nil
 }
 
+func (c *schemasServiceClient) GetSchemasPlugin(ctx context.Context, in *GetSchemasPluginRequest, opts ...grpc.CallOption) (*GetSchemasPluginResponse, error) {
+	out := new(GetSchemasPluginResponse)
+	err := c.cc.Invoke(ctx, "/kong.admin.service.v1.SchemasService/GetSchemasPlugin", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // SchemasServiceServer is the server API for SchemasService service.
 // All implementations must embed UnimplementedSchemasServiceServer
 // for forward compatibility
 type SchemasServiceServer interface {
 	GetSchemas(context.Context, *GetSchemasRequest) (*GetSchemasResponse, error)
+	GetSchemasPlugin(context.Context, *GetSchemasPluginRequest) (*GetSchemasPluginResponse, error)
 	mustEmbedUnimplementedSchemasServiceServer()
 }
 
@@ -52,6 +63,9 @@ type UnimplementedSchemasServiceServer struct {
 
 func (UnimplementedSchemasServiceServer) GetSchemas(context.Context, *GetSchemasRequest) (*GetSchemasResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetSchemas not implemented")
+}
+func (UnimplementedSchemasServiceServer) GetSchemasPlugin(context.Context, *GetSchemasPluginRequest) (*GetSchemasPluginResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetSchemasPlugin not implemented")
 }
 func (UnimplementedSchemasServiceServer) mustEmbedUnimplementedSchemasServiceServer() {}
 
@@ -84,6 +98,24 @@ func _SchemasService_GetSchemas_Handler(srv interface{}, ctx context.Context, de
 	return interceptor(ctx, in, info, handler)
 }
 
+func _SchemasService_GetSchemasPlugin_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSchemasPluginRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SchemasServiceServer).GetSchemasPlugin(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/kong.admin.service.v1.SchemasService/GetSchemasPlugin",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SchemasServiceServer).GetSchemasPlugin(ctx, req.(*GetSchemasPluginRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // SchemasService_ServiceDesc is the grpc.ServiceDesc for SchemasService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -94,6 +126,10 @@ var SchemasService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetSchemas",
 			Handler:    _SchemasService_GetSchemas_Handler,
+		},
+		{
+			MethodName: "GetSchemasPlugin",
+			Handler:    _SchemasService_GetSchemasPlugin_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
